fix: chevron not rotating when expanding or collapsing a wishlist item

--- a/client/src/pages/Wishlist/Wishlist.css
+++ b/client/src/pages/Wishlist/Wishlist.css
@@ -142,7 +142,7 @@ main {
 
         &.expanded {
           .header {
-            button {
+            span {
               svg {
                 @apply rotate-180;
               }
